[package]
name = "bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_http.version = "0.15.0"
lambda_runtime = "0.14.0"
reqwest = { version = "0.12.19", features = ["h2", "http2", "rustls-tls-webpki-roots"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
